@@ -43,6 +43,7 @@ Options:
       --pdf		generate PDF output
       --title=NAME	use NAME as the title of the document
   -V, --verbose		report on what is done
+      --no-index	don't index PDF output
 
 The output papersize is set by the environment variable R_PAPERSIZE.
 The DVI previewer is set by the environment variable xdvi.
@@ -61,6 +62,7 @@ out_ext="dvi"
 output=""
 verbose=false
 enc=unknown
+index=true
 
 if test "${R_OSTYPE}" = "windows"; then
   echo=echo
@@ -126,7 +128,9 @@ while test -n "${1}"; do
       build_dir=`echo "${1}" | ${SED} -e 's/[^=]*=//'` ;;
     -V|--verbose)
       verbose=${echo} ;;
-    --|*)
+     --no-index)
+      index=false ;;
+   --|*)
       break ;;
   esac
   shift
@@ -417,13 +421,15 @@ if test "${out_ext}" = pdf; then
     do_cleanup
     exit 1
   fi
-  ## OK for R_MAKEINDEXCMD to fail.
-  ${R_MAKEINDEXCMD} Rd2
-  ${R_PDFLATEXCMD} ${R_TEXOPTS} Rd2 || status=1
-  if test $status -gt 0; then
-    echo "Error in running pdflatex command ('${R_PDFLATEXCMD}')"
-    do_cleanup
-    exit 1
+  if test "${index}" != "false"; then
+    ## OK for R_MAKEINDEXCMD to fail.
+    ${R_MAKEINDEXCMD} Rd2
+    ${R_PDFLATEXCMD} ${R_TEXOPTS} Rd2 || status=1
+    if test $status -gt 0; then
+      echo "Error in running pdflatex command ('${R_PDFLATEXCMD}')"
+      do_cleanup
+      exit 1
+    fi
   fi
   ${R_PDFLATEXCMD} ${R_TEXOPTS} Rd2 || status=1
   if test $status -gt 0; then
